--- a/index.html
+++ b/index.html
@@ -3,75 +3,112 @@
 <head>
   <title>Shahin Tech BD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
     body {
       font-family: Arial;
       margin: 0;
       background: #f4f4f4;
     }
+
     header {
-      background: #111;
+      background: black;
       color: white;
       padding: 15px;
       text-align: center;
       font-size: 24px;
     }
+
     .container {
       padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
     }
-    .product {
+
+    .card {
       background: white;
       padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-align: center;
     }
-    .product img {
+
+    .card img {
       width: 100%;
-      border-radius: 8px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
     }
+
     .price {
       color: green;
-      font-size: 20px;
-      margin-top: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      margin: 10px 0;
     }
+
     button {
       background: black;
       color: white;
-      padding: 10px 15px;
+      padding: 10px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      margin-top: 10px;
+      width: 100%;
     }
+
     button:hover {
-      background: #444;
+      background: #333;
     }
   </style>
 </head>
+
 <body>
 
-<header>
-  Shahin Tech BD
-</header>
+<header>Shahin Tech BD</header>
 
-<div class="container">
+<div class="container" id="products"></div>
 
-  <div class="product">
-    <img src="https://via.placeholder.com/400x250">
-    <h3>Wireless Mouse</h3>
-    <p class="price">৳ 850</p>
-    <button>Add to Cart</button>
-  </div>
+<script>
 
-  <div class="product">
-    <img src="https://via.placeholder.com/400x250">
-    <h3>Bluetooth Headphone</h3>
-    <p class="price">৳ 1,450</p>
-    <button>Add to Cart</button>
-  </div>
+const API_URL = "https://script.google.com/macros/s/AKfycbyk0-LlA2LugHdTSZ5jc9HPcSKCTVAlfsqUIP_rppELXMF4h4WAM2CHJfIDtRkyAuY/exec";
 
-</div>
+async function loadProducts() {
+  try {
+    const response = await fetch(API_URL);
+    const data = await response.json();
+
+    let html = "";
+
+    data.forEach(product => {
+      if(product.Status === "Show") {
+        html += `
+          <div class="card">
+            <img src="${product.Image}" alt="${product.Name}">
+            <h3>${product.Name}</h3>
+            <div class="price">৳ ${product.Price}</div>
+            <button onclick="addToCart('${product.Name}')">Add to Cart</button>
+          </div>
+        `;
+      }
+    });
+
+    document.getElementById("products").innerHTML = html;
+
+  } catch (error) {
+    document.getElementById("products").innerHTML =
+      "<p style='color:red;text-align:center;'>Product Load Failed ❌</p>";
+  }
+}
+
+function addToCart(name) {
+  alert(name + " added to cart ✅");
+}
+
+loadProducts();
+
+</script>
 
 </body>
 </html>
