--- a/index.html
+++ b/index.html
@@ -1,169 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shahin Tech BD</title>
+  <meta charset="UTF-8">
+  <title>Shahin Tech BD</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#f5f5f5;
-}
-
-/* Header */
-.header{
-  background:#f85606;
-  color:white;
-  padding:12px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  position:sticky;
-  top:0;
-}
-
-.header h2{
-  margin:0;
-  font-size:18px;
-}
-
-.cart{
-  background:white;
-  color:#f85606;
-  padding:5px 10px;
-  border-radius:20px;
-  font-size:14px;
-}
-
-/* Product Grid */
-.products{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:10px;
-  padding:10px;
-}
-
-.card{
-  background:white;
-  border-radius:8px;
-  overflow:hidden;
-  box-shadow:0 2px 5px rgba(0,0,0,0.1);
-  position:relative;
-}
-
-.card img{
-  width:100%;
-  height:160px;
-  object-fit:cover;
-}
-
-.badge{
-  position:absolute;
-  top:8px;
-  left:8px;
-  background:red;
-  color:white;
-  font-size:12px;
-  padding:3px 6px;
-  border-radius:4px;
-}
-
-.discount{
-  position:absolute;
-  top:8px;
-  right:8px;
-  background:#f85606;
-  color:white;
-  font-size:12px;
-  padding:3px 6px;
-  border-radius:4px;
-}
-
-.card-body{
-  padding:8px;
-}
-
-.card-body h4{
-  font-size:14px;
-  margin:5px 0;
-  height:34px;
-  overflow:hidden;
-}
-
-.price{
-  color:#f85606;
-  font-weight:bold;
-}
-
-.old-price{
-  text-decoration:line-through;
-  color:gray;
-  font-size:12px;
-}
-
-button{
-  width:100%;
-  background:#f85606;
-  color:white;
-  border:none;
-  padding:8px;
-  margin-top:5px;
-  border-radius:4px;
-  font-size:14px;
-}
-</style>
+  <style>
+    body { font-family: Arial; margin: 0; background:#f4f4f4; }
+    header { background:#ff6600; color:white; padding:15px; text-align:center; font-size:20px; }
+    .container { padding:15px; }
+    .card {
+      background:white;
+      padding:15px;
+      border-radius:10px;
+      margin-bottom:15px;
+      box-shadow:0 2px 5px rgba(0,0,0,0.1);
+    }
+    button {
+      background:#ff6600;
+      color:white;
+      border:none;
+      padding:10px;
+      width:100%;
+      border-radius:5px;
+      font-size:16px;
+    }
+    input, textarea, select {
+      width:100%;
+      padding:10px;
+      margin-bottom:10px;
+    }
+  </style>
 </head>
-
 <body>
 
-<div class="header">
-  <h2>Shahin Tech BD</h2>
-  <div class="cart">Cart: <span id="cartCount">0</span></div>
+<header>Shahin Tech BD</header>
+
+<div class="container" id="products"></div>
+
+<div class="container">
+  <h3>Checkout</h3>
+  <input type="text" id="name" placeholder="Your Name">
+  <input type="text" id="phone" placeholder="Phone Number">
+  <textarea id="address" placeholder="Address"></textarea>
+  <select id="payment">
+    <option value="Cash On Delivery">Cash On Delivery</option>
+  </select>
+  <button onclick="submitOrder()">Place Order</button>
 </div>
 
-<div class="products" id="products"></div>
-
 <script>
+const API_URL = "https://script.google.com/macros/s/AKfycbxsJm5bOqhSJSbT-mrhlCV4lBAhNvWuL5HiejIYH7GrqUo-M4wg7DXm29ePapMot2iq/exec";
 
-const API_URL = "https://script.google.com/macros/s/AKfycbyk0-LlA2LugHdTSZ5jc9HPcSKCTVAlfsqUIP_rppELXMF4h4WAM2CHJfIDtRkyAuY/exec";
+let cart = [];
 
-let cart = 0;
-
-async function loadProducts(){
-  const res = await fetch(API_URL);
-  const data = await res.json();
-
-  let html = "";
-
-  data.forEach(p=>{
-    if(p.Status==="Show"){
-      html += `
+fetch(API_URL)
+.then(res => res.json())
+.then(data => {
+  const container = document.getElementById("products");
+  data.forEach(product => {
+    container.innerHTML += `
       <div class="card">
-        ${p.Badge ? `<div class="badge">${p.Badge}</div>` : ""}
-        ${p.Discount ? `<div class="discount">-${p.Discount}%</div>` : ""}
-        <img src="${p.Image}">
-        <div class="card-body">
-          <h4>${p.Name}</h4>
-          <div class="price">৳ ${p.Price}</div>
-          ${p.OldPrice ? `<div class="old-price">৳ ${p.OldPrice}</div>` : ""}
-          <button onclick="addToCart()">Add to Cart</button>
-        </div>
+        <h3>${product.name}</h3>
+        <p>৳ ${product.price}</p>
+        <button onclick='addToCart("${product.name}", ${product.price})'>Add to Cart</button>
       </div>
-      `;
-    }
+    `;
   });
+});
 
-  document.getElementById("products").innerHTML = html;
+function addToCart(name, price) {
+  cart.push({name, price});
+  alert("Added to Cart");
 }
 
-function addToCart(){
-  cart++;
-  document.getElementById("cartCount").innerText = cart;
+function submitOrder() {
+  if(cart.length === 0){
+    alert("Cart is empty");
+    return;
+  }
+
+  const total = cart.reduce((sum, item) => sum + Number(item.price), 0);
+
+  const orderData = {
+    name: document.getElementById("name").value,
+    phone: document.getElementById("phone").value,
+    address: document.getElementById("address").value,
+    payment: document.getElementById("payment").value,
+    products: JSON.stringify(cart),
+    total: total
+  };
+
+  fetch(API_URL, {
+    method: "POST",
+    body: JSON.stringify(orderData)
+  })
+  .then(res => res.json())
+  .then(response => {
+    alert("Order Placed Successfully!");
+    cart = [];
+  })
+  .catch(err => {
+    alert("Error placing order");
+  });
 }
-
-loadProducts();
-
 </script>
 
 </body>
